--- a/01.01.hello.html
+++ b/01.01.hello.html
@@ -10,48 +10,84 @@
     </div>
     <script src="./build/react.js"></script>
     <script src="./build/react-dom.js"></script>
+    <script src="./build/react-with-addons.js"></script>
     <script>
-      var TextAreaCounter = React.createClass({
-        propTypes: {
-          text: React.PropTypes.string,
-        },
 
-        getDefaultProps: function() {
-          return {
-            text: '',
-          };
-        },
+      var logMixin = {
+          _log: function (methodName, args) {
+            console.log(this.name + '::' + methodName, args);
+          },
+          componentWillUpdate: function () { this._log('componentWillUpdate', arguments); },
+          componentDidUpdate: function () { this._log('componentDidUpdate', arguments); },
+          componentWillMount: function () { this._log('componentWillMount', arguments); },
+          componentDidMount: function () { this._log('componentDidMount', arguments); },
+          componentWillUnmount: function () { this._log('componentWillUnmount', arguments); },
+        };
 
-        getInitialState: function(){
-          return  {
-            text: this.props.text,
-          };
-        },
+        var Counter = React.createClass({
+          name: 'Counter',
+          mixins: [React.addons.PureRenderMixin],
+          // mixins: [logMixin],
+          propTypes: {
+            count: React.PropTypes.number.isRequired,
+          },
+          // shouldComponentUpdate(nextProps, nextState_ignore){
+          //   // console.log(this.name + '::shouldComponentUpdate()');
+          //   return nextProps.count !== this.props.count;
+          // },
+          render:function() {
+            console.log(this.name + '::render()');
+            return React.DOM.span(null, this.props.count);
+          }
+        });
 
-        _textChange: function(event) {
-          this.setState({
-            text: event.target.value,
-          });
-        },
+        var TextAreaCounter = React.createClass({
+          name: 'TextAreaCounter',
+          // mixins: [logMixin],
 
-        render: function() {
-          return React.DOM.div(null,
-          React.DOM.textarea({
-            value: this.state.text,
-            onChange: this._textChange,
+          propTypes: {
+            defaultValue: React.PropTypes.string,
+          },
+
+          getInitialState: function () {
+            return {
+              text: this.props.defaultValue,
+            };
+          },
+
+          _textChange: function (ev) {
+            this.setState({
+              text: ev.target.value,
+            });
+          },
+
+          render: function () {
+            console.log(this.name + '::render()');
+
+            var counter = null;
+            if (this.state.text.length > 0) {
+              counter = React.DOM.h3(null,
+                React.createElement(Counter, {
+                  count: this.state.text.length,
+                })
+              );
+            }
+            return React.DOM.div(null,
+              React.DOM.textarea({
+                value: this.state.text,
+                onChange: this._textChange,
+              }),
+              counter
+            );
+          }
+        });
+
+        var myTextAreaCounter = ReactDOM.render(
+          React.createElement(TextAreaCounter, {
+            defaultValue: "Bob",
           }),
-          React.DOM.h3(null, this.state.text.length)
-          );
-        }
-      });
-
-      ReactDOM.render(
-        React.createElement(TextAreaCounter, {
-          text: "ボブ",
-        }),
-        document.getElementById("app")
-
-      );
+          document.getElementById("app")
+        );
     </script>
   </body>
 </html>
