--- a/03.01.table-th.html
+++ b/03.01.table-th.html
@@ -33,6 +33,7 @@
           data: this.props.initialData,
           sortby: null,
           descending: false,
+          edit: null, //{row:行番号, cell:列番号}
         };
       },
 
@@ -53,6 +54,24 @@
         });
       },
 
+      _showEditor: function(e) {
+        this.setState({edit: {
+          row: parseInt(e.target.dataset.row, 10),
+          cell: e.target.cellIndex,
+        }});
+      },
+
+      _save: function(e) {
+        e.preventDefault();
+        var input = e.target.firstChild;
+        var data = this.state.data.slice();
+        data[this.state.edit.row][this.state.edit.cell] = input.value;
+        this.setState({
+          edit: null,
+          data: data,
+        });
+      },
+
       render: function() {
         return (
           React.DOM.table(null,
@@ -66,15 +85,27 @@
                 },this)
               )
             ),
-              React.DOM.tbody(null,this.state.data.map(function(row, idx){
+              React.DOM.tbody({onDoubleClick: this._showEditor},this.state.data.map(function(row, rowidx){
                 return(
-                  React.DOM.tr({key:idx},
+                  React.DOM.tr({key: rowidx},
                     row.map(function(cell,idx) {
-                      return React.DOM.td({key:idx},cell);
-                    })
+                      var content = cell;
+                      var edit = this.state.edit;
+                      if(edit && edit.row === rowidx && edit.cell === idx)
+                        content = React.DOM.form({onSubmit: this._save},
+                        React.DOM.input({
+                          type:'text',
+                          defaultValue: content,
+                        })
+                      );
+                      return React.DOM.td({
+                        key: idx,
+                        'data-row': rowidx
+                      },content);
+                    },this)
                   )
                 );
-              })
+              },this)
             )
           )
         );
