--- a/03.01.table-th.html
+++ b/03.01.table-th.html
@@ -17,6 +17,7 @@
   <script>
 
     var Excel = React.createClass({
+      
       displayName: 'Excel',
       propTypes:{
         headers:React.PropTypes.arrayOf(
@@ -28,12 +29,48 @@
           )
         ),
       },
-      getInitialState: function() {
+      
+
+      _log: [],
+
+      _logSetState: function (newState) {
+        this._log.push(JSON.parse(JSON.stringify(
+          this._log.length === 0 ? this.state : newState
+        )));
+        this.setState(newState);
+      },
+
+      _replay: function(){
+        if(this._log.length === 0){
+          console.warn('ステートが記録されていません');
+          return;
+        }
+        var idx = -1;
+        var interval = setInterval(function(){
+          idx++;
+          if(idx === this._log.length -1){
+            clearInterval(interval);
+          }
+          this.setState(this._log[idx]);
+        }.bind(this),1000);
+      },
+
+      componentDidMount: function(){
+        document.onkeydown = function(e) {
+          //ALT+SHIFT+R(eplay)
+          if(e.altKey && e.shiftKey && e.keyCode === 82) {
+            this._replay();
+          }
+        }.bind(this);
+      },
+
+      getInitialState: function () {
         return {
           data: this.props.initialData,
           sortby: null,
           descending: false,
           edit: null, //{row:行番号, cell:列番号}
+          search: false,
         };
       },
 
@@ -47,7 +84,7 @@
           // return a.data > b.data ? 1 : -1;
           return descending ? (a[column] < b[column] ? 1 : -1) : (a[column] > b[column] ? 1 : -1);
         });
-        this.setState({
+        this._logSetState({
           data: data,
           sortby: column,
           descending: descending,
@@ -55,7 +92,7 @@
       },
 
       _showEditor: function(e) {
-        this.setState({edit: {
+        this._logSetState({edit: {
           row: parseInt(e.target.dataset.row, 10),
           cell: e.target.cellIndex,
         }});
@@ -66,13 +103,106 @@
         var input = e.target.firstChild;
         var data = this.state.data.slice();
         data[this.state.edit.row][this.state.edit.cell] = input.value;
-        this.setState({
+        this._logSetState({
           edit: null,
           data: data,
         });
       },
 
-      render: function() {
+      _preSearchData: null,
+
+      _toggleSearch: function() {
+        if(this.state.search) {
+          this._logSetState({
+            data: this._preSearchData,
+            search: false,
+          });
+          this._preSearchData = null;
+        }else{
+          this._preSearchData = this.state.data;
+          this._logSetState({
+            search: true,
+          });
+        }
+      },
+
+      _search: function(e) {
+        var needle = e.target.value.toLowerCase();
+        if(!needle) {
+          this._logSetState({data:this._preSearchData});
+          return;
+        }
+        var idx = e.target.dataset.idx;
+        var searchdata = this._preSearchData.filter(function(row){
+          return row[idx].toString().toLowerCase().indexOf(needle) > -1;
+        });
+        this._logSetState({data: searchdata});
+      },
+
+      _download: function(format, ev){
+        var contents = format === 'json'
+        ? JSON.stringify(this.state.data)
+        : this.state.data.reduce(function(result, row){
+          return result
+            + row.reduce(function(rowresult, cell, idx){
+              return rowresult
+                +'"'
+                +cell.replace(/"/g, '""')
+                +'"'
+                +(idx < row.length -1 ? ',' : '');
+            },'')
+            + "\n";
+        },'');
+        var URL = window.URL || window.webkitURL;
+        var blob = new Blob([contents], {type:'text/' + format});
+        ev.target.href = URL.createObjectURL(blob);
+        ev.target.download = 'data.' + format;
+      },
+
+      render: function(){
+        return(
+          React.DOM.div(null,
+          this._renderToolbar(),
+          this._renderTable()
+          )
+        );
+      },
+
+      _renderToolbar: function(){
+        return React.DOM.div({className: 'toolbar'},
+          React.DOM.button({
+            onClick: this._toggleSearch,
+          },'検索'),
+          React.DOM.a({
+            onClick: this._download.bind(this, 'json'),
+            href: 'data.json'
+          },'JSONで保存'),
+          React.DOM.a({
+            onClick: this._download.bind(this, 'csv'),
+            href: 'data.csv'
+          },'CSVで保存'),
+        );
+      }, 
+
+      _renderSearch: function(){
+        if(!this.state.search){
+          return null;
+        }
+        return(
+          React.DOM.tr({onChange: this._search},
+            this.props.headers.map(function(_ignore,idx){
+              return React.DOM.td({key: idx},
+                React.DOM.input({
+                  type:'text',
+                  'data-idx':idx,
+                })
+              );
+            })
+          )
+        )
+      },
+
+      _renderTable: function() {
         return (
           React.DOM.table(null,
             React.DOM.thead({onClick: this._sort},
@@ -85,19 +215,22 @@
                 },this)
               )
             ),
-              React.DOM.tbody({onDoubleClick: this._showEditor},this.state.data.map(function(row, rowidx){
+              React.DOM.tbody({onDoubleClick: this._showEditor},
+              this._renderSearch(),
+              this.state.data.map(function(row, rowidx){
                 return(
                   React.DOM.tr({key: rowidx},
                     row.map(function(cell,idx) {
                       var content = cell;
                       var edit = this.state.edit;
-                      if(edit && edit.row === rowidx && edit.cell === idx)
+                      if(edit && edit.row === rowidx && edit.cell === idx){
                         content = React.DOM.form({onSubmit: this._save},
-                        React.DOM.input({
-                          type:'text',
-                          defaultValue: content,
-                        })
-                      );
+                          React.DOM.input({
+                            type:'text',
+                            defaultValue: cell,
+                          })
+                        );
+                      }
                       return React.DOM.td({
                         key: idx,
                         'data-row': rowidx
